[0.6.0]
- COMPOSER: fix package naming when creating ios project

[0.5.0]
- Updated to libgdx 1.4.1
- ENGINE: Debug screen with speed control, record/play games and go to any scene in runtime
- ENGINE: Material style buttons in engine UI. Better look and feel for inventory and pie menu.

[0.4.0]
- ENGINE: Custom game UI Screen support

[0.3.2]
- COMPOSER: Fixed bug when running project without console

[0.3.1]
- COMPOSER: Fixed accessing opengl context issue when creating project in the new thread.

[0.3.0]
- ENGINE: Action refactoring. WARNING: Names have changed. All previous games are not compatible.
- ENGINE: New DebugScreen (Work in progress)
- ENGINE: Change speed support for fastforward.
- ENGINE: The blade-engine.jar are now in Maven Central. When creating a new game, the Maven dependency is added instead of adding the engine jar in libs folder.

[0.2.0]
- COMPOSER: Fixed NullPointer error when creating project
- COMPOSER: Threads for long tasks to show UI message status
- COMPOSER: FIXED packaging with embedded JRE.
- ENGINE: CreditsScreen fonts now obtained from Skin

[0.1.0]
- Initial release